Unexpectedly long delay when searching via Google and HTTP/3 enabled
Categories
(Core :: Networking, defect, P2)
Tracking
()
People
(Reporter: yoasif, Assigned: dragana)
References
(Blocks 1 open bug)
Details
(Keywords: perf:resource-use, Whiteboard: [necko-triaged])
Attachments
(3 files)
28.93 KB,
text/plain
|
Details | |
1.72 MB,
application/zip
|
Details | |
48 bytes,
text/x-phabricator-request
|
RyanVM
:
approval-mozilla-beta+
|
Details | Review |
Basic information
I have noticed for a few days that when doing a search via the built in Google search, I sometimes get a long delay. I used to work around it by doing the same search again (command-k, enter), but I took a few profiles today.
Steps to Reproduce:
- Do a search via Command-k (separate search toolbar) or typing directly into address bar and hitting enter
Expected Results:
Very fast results.
Actual Results:
Multiple seconds waiting. Slow enough that I started to capture profiles while it was happening.
More information
Profile URL: Two profiles from today:
Basic systems configuration:
OS version: macOS 10.15.7 (19H524)
GPU model: Intel HD Graphics 6000 1536 MB
Number of cores: 1.6 GHz Dual-Core Intel Core i5
Amount of memory (RAM): 4GB
Thanks so much for your help.
Reporter | ||
Comment 1•4 years ago
|
||
That looks like Google is slow at responding.
Any chance you have some issues with the network connection?
Moving to Networking but adding [qf] so that this stays in performance team's triage list.
Comment 4•4 years ago
|
||
Sometimes I experience the same slowness with Google specific domains. See my latest comments on bug 1648101. Maybe this is somewhat related. My suspicion so far is the usage of DoH and here especially NextDNS as provider. Triggering a forced reload of the page while it's still waiting to be loaded mostly causes the page to load instantly.
Note that when such a situation happens both Chrome and Safari also load the page instantly. Then AFAIR it also works for Firefox.
Asif, are you using DoH, and do you see a similar behavior when forcing a reload at this time?
Reporter | ||
Comment 5•4 years ago
|
||
Henrik,
I'm a little surprised, but I am not using DoH on this profile of Firefox.
For what it is worth, I am using these DNS servers on my router:
9.9.9.9
1.1.1.1
The forced reload works for me as well.
Olli,
I don't have issues with general network connections - at least not that I have noted. I have a gigabit connection and I am connected via WiFi on a router in the same room.
Comment 6•4 years ago
|
||
This might be a dupe of bug 1694035. But I'll keep this bug open for now given that there might be other problems as well. We can check again once bug 1694035 has been investigated / fixed.
Reporter | ||
Comment 7•4 years ago
|
||
I noticed that my install is in a "HTTP3 on Nightly" study - could that have anything to do with it?
Comment 8•4 years ago
|
||
(In reply to Asif Youssuff from comment #7)
I noticed that my install is in a "HTTP3 on Nightly" study - could that have anything to do with it?
Dragana, could you take a look?
Thanks.
Comment 9•4 years ago
|
||
I actually also have the HTTP3
experiment turned on.
Assignee | ||
Comment 10•4 years ago
|
||
Can someone make a http log while this is happening. Is it reproducible enough to make a log?
https://developer.mozilla.org/en-US/docs/Mozilla/Debugging/HTTP_logging
When did it started happening? I have landed some changes on Friday and I am wondering if this was happening before Friday as well?
Comment 12•4 years ago
|
||
At the moment it happens kinda rarely for me. So maybe Asif has a better chance to catch it.
For me it's already happening a while, but lets see what Asif will say.
Reporter | ||
Comment 13•4 years ago
|
||
I grabbed a log using about:networking#logging
. There seems to be a lot of log data, but I saw the slowness when searching for "manager" in the built in Google search in Firefox.
I'm not sure when it started happening - I run Nightly on all of my machines but generally on Linux. I have only seen this on my Mac, which I recently resumed using. I do think it was happening before Friday, however.
Assignee | ||
Updated•4 years ago
|
Updated•4 years ago
|
Updated•4 years ago
|
Comment 14•4 years ago
|
||
Dragana do you have an update for us? I'm hitting this kinda frequently now each and every day. It makes it kinda annoying to have to wait sometimes minutes. Thanks.
Assignee | ||
Comment 15•4 years ago
|
||
Assignee | ||
Comment 16•4 years ago
|
||
A try build is here:
https://treeherder.mozilla.org/jobs?repo=try&revision=1bba5a7b93fecd49174c033385620fc3a3d8a59d
Can you try it out:
The Linux build is here: https://firefox-ci-tc.services.mozilla.com/api/queue/v1/task/IsFs0491RfegNZDFcy_jWg/runs/0/artifacts/public/build/target.tar.bz2
The MAC build is here: https://firefox-ci-tc.services.mozilla.com/api/queue/v1/task/OtAfZSMATjeh5Ub48Zdsew/runs/0/artifacts/public/build/target.dmg
Comment 17•4 years ago
|
||
Assignee | ||
Comment 18•4 years ago
|
||
The change will be in Nightly tomorrow as well.
Comment 19•4 years ago
|
||
bugherder |
Assignee | ||
Comment 20•4 years ago
|
||
Comment on attachment 9213090 [details]
Make sure to trigger writes after HTTP/3 session has been connected
Beta/Release Uplift Approval Request
- User impact if declined: Page load may stall for a long time
- Is this code covered by automated tests?: No
- Has the fix been verified in Nightly?: No
- Needs manual test from QE?: No
- If yes, steps to reproduce:
- List of other uplifts needed: None
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): A function (ResumSending) is called always after a a HTTP/3 connection enters state CONNECTED. There is one corner case when it is not called and this patch fixes it.
- String changes made/needed:
Comment 21•4 years ago
|
||
Comment on attachment 9213090 [details]
Make sure to trigger writes after HTTP/3 session has been connected
Approved for 88.0b7.
Comment 22•4 years ago
|
||
bugherder uplift |
Reporter | ||
Updated•4 years ago
|
Comment 23•4 years ago
|
||
Thanks Dragana for the fix! I will keep an eye on it over the next days if the page loads have been improved.
Comment 24•4 years ago
|
||
So far I haven't seen any issues anymore when HTTP/3 is enabled.
Updated•3 years ago
|
Description
•