Bug 1695717 - Make sure to trigger writes after HTTP/3  session has been connected r=necko-reviewers,kershaw

Differential Revision: https://phabricator.services.mozilla.com/D110545